--- a/TudorForSpeed/TudorForSpeed/Pages/CupraFormentor.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/CupraFormentor.cshtml
@@ -1,4 +1,89 @@
 ﻿@page
 @model TudorForSpeed.Pages.CupraFormentorModel
 @{
+    Layout = "~/Pages/Shared/LayoutCupra/_CupraModelsLayout.cshtml";
 }
+<div id="mySidenav" class="sidenav">
+    <a asp-page="" id="Cupra">Cupra Formentor (31.250€)</a>
+    <a asp-page="./CupraMain" id="GoBack">Go Back <i class='bx bx-arrow-back'></i></a>
+    <a asp-page="" id="OrderNow">OrderNow <i class='bx bxs-shopping-bag'></i></a>
+</div>
+
+<section class="CupraForSection">
+    <img src="~/Img/CupraFor/pageforcupra.jpg" />
+</section>
+<section class="CupraForSection">
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-interval="8000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="10000">
+                <img class="d-block" src="~/Img/CupraFor/2.png" alt="slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Interni Davanti</h5>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block" src="~/Img/CupraFor/formentorinternidavanti.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Interni Davanti</h5>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block" src="~/Img/CupraFor/formentorinternidietro.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Interni Dietro</h5>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" data-interval="8000">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+</section>
+
+<section class="FinalCupraForSection">
+    <div class="FinalCard">
+        <div class="FinalCarStats finalblack">
+            <div class="FinalCarStats_Video">
+                <img src="~/Img/CupraFor/prestazionisportive.jpg" />
+                <h3>Performance. Anche in frenata.</h3>
+                <p>
+                    Un gruppo propulsore da 2,0 litri e 310 CV, trazione integrale 4Drive e un cambio automatico DSG a 7 rapporti.
+                </p>
+            </div>
+        </div>
+        <div class="FinalCarStats finalblack">
+            <div class="FinalCarStats_Video">
+                <img src="~/Img/CupraFor/tecnodriveroriented.jpg" />
+                <h3>Un capolavoro di aerodinamica.</h3>
+                <p>
+                    I sistemi di connettività e assistenza alla guida CUPRA sono sempre a portata di mano. Anche tramite smartphone.
+                </p>
+            </div>
+        </div>
+        <div class="FinalCarStats finalblack">
+            <div class="FinalCarStats_Video">
+                <img src="~/Img/CupraFor/design.jpg" />
+                <h3>Design inconfondibile.</h3>
+                <p>
+                    Linee tese e forme aerodinamiche studiate per scolpire il design di Formentor, unione di design e sportività.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="Finale">
+    <p>Sito web solamente a scopo didattico creato da Daniele Tudorachi 5IC</p>
+</footer>
