--- a/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_IndexLayout.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_IndexLayout.cshtml
@@ -36,49 +36,49 @@
                 </ul>
             </li>
             <li>
-                <a asp-area="/CupraMain">Cupra</a>
+                <a asp-page="/CupraMain">Cupra</a>
                 <ul>
                     <li>
-                        <a asp-area="/CupraFormentor">Formentor</a>
+                        <a asp-page="/CupraFormentor">Formentor</a>
                     </li>
                     <li>
-                        <a asp-area="/CupraLeon">Leon</a>
+                        <a asp-page="/CupraLeon">Leon</a>
                     </li>
                     <li>
-                        <a asp-area="/CupraLeonSportstourer">Leon Sportstourer</a>
+                        <a asp-page="/CupraLeonSportstourer">Leon Sportstourer</a>
                     </li>
                     <li>
-                        <a asp-area="/CupraAteca">Ateca</a>
+                        <a asp-page="/CupraAteca">Ateca</a>
                     </li>
                     <li>
-                        <a asp-area="/CupraBorn">Born</a>
+                        <a asp-page="/CupraBorn">Born</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a asp-area="/FordMain">FORD</a>
+                <a asp-page="/FordMain">FORD</a>
                 <ul>
                     <li>
-                        <a asp-area="/MustangMachE">Mustang Mach-E</a>
+                        <a asp-page="/MustangMachE">Mustang Mach-E</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a asp-area="/LexusMain">LEXUS</a>
+                <a asp-page="/LexusMain">LEXUS</a>
                 <ul>
                     <li>
-                        <a asp-area="/LexusUX300E">UX 300e</a>
+                        <a asp-page="/LexusUX300E">UX 300e</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a asp-area="/PorscheMain">PORSCHE</a>
+                <a asp-page="/PorscheMain">PORSCHE</a>
                 <ul>
                     <li>
-                        <a asp-area="/PorscheTaycan">Taycan</a>
+                        <a asp-page="/PorscheTaycan">Taycan</a>
                     </li>
                     <li>
-                        <a asp-area="/PorscheTaycanCrossTurismo">Taycan Cross Turismo</a>
+                        <a asp-page="/PorscheTaycanCrossTurismo">Taycan Cross Turismo</a>
                     </li>
                 </ul>
             </li>
