--- a/TudorForSpeed/TudorForSpeed/wwwroot/css/Index.css
+++ b/TudorForSpeed/TudorForSpeed/wwwroot/css/Index.css
@@ -6,7 +6,7 @@
 
 body{
     background-image: url("../Img/Background.png");
-    padding: 30px;
+    padding: 30px 10px;
     background-repeat: no-repeat;
     background-size: cover;
 }
