--- a/TudorForSpeed/TudorForSpeed/Pages/CupraMain.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/CupraMain.cshtml
@@ -1,4 +1,78 @@
 ﻿@page
 @model TudorForSpeed.Pages.CupraMainModel
 @{
+    Layout = "~/Pages/Shared/Layout/_CupraLayout.cshtml";
 }
+<section class="CupraSectionHome">
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-interval="8000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="10000">
+                <img class="d-block" src="~/Img/CupraFor/cupra.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block cuprastylebatman">
+                    <h5>Cupra Formentor</h5>
+                    <p>Tutti gli amanti del brivido hanno bisogno di sentirsi un eroe come batman, ma senza Cupra dove vuoi andare per la citta'?</p>
+                    <button class="batmaneffect" asp-page="./CupraFormentor">
+                        <span>Show More</span>
+                    </button>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block" src="~/Img/CupraAteca/CupraAteca.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block cuprastylebatman">
+                    <h5>Cupra Ateca</h5>
+                    <p>Alfred dove e' la mia auto?<br />Credo che la Signorina Selena abbia preso la sua Cupra!</p>
+                    <button class="batmaneffect" asp-page="./CupraAteca">
+                        <span>Show More</span>
+                    </button>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block w-100" src="~/Img/CupraBorn/cupraborn.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block cuprastylebatman">
+                    <h5>Cupra Born</h5>
+                    <p>Io sono Cupra!</p>
+                    <button class="batmaneffect" asp-page="./CupraBorn">
+                        <span>Show More</span>
+                    </button>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block w-100" src="~/Img/CupraLeon/cupraleon.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block cuprastylebatman">
+                    <h5>Cupra Leon</h5>
+                    <p>Voglio entrare a lavorare con te Bruce, voglio unirmi alla Cupra Tribe</p>
+                    <button class="batmaneffect" asp-page="./CupraLeon">
+                        <span>Show More</span>
+                    </button>
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="10000">
+                <img class="d-block w-100" src="~/Img/CupraLeonSportiva/CupraLeonSportstourer.jpg" alt="slide">
+                <div class="carousel-caption d-none d-md-block cuprastylebatman">
+                    <h5>Cupra Leon Sportstourer</h5>
+                    <p>Fox quanto veloce puo' andare questo bolide?<br />Abbastanza veloce perche'<br />Ne voglio una, ma di colore scuro si puo' avere?<br />Sara fatto</p>
+                    <button class="batmaneffect">
+                        <span>Show More</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"  data-interval="8000">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+</section>
