--- a/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_CupraLayout.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_CupraLayout.cshtml
@@ -1,13 +1,71 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <!-- Title -->
+    <title>TudorForSpeed</title>
+
+    <!-- Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+
+    <!-- Link -->
+    <link rel="stylesheet" href="~/Css/Cupra/Cupra.css" asp-append-version="true">
+
+    <!-- Script -->
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-    <div>
-        @RenderBody()
-    </div>
+    <!-- Navbar -->
+    <header>
+        <a asp-area="" asp-page="" class="logo">
+            <img src="https://static.wixstatic.com/media/468807_cc3716a79394430fb598b2f533b675e9~mv2.png/v1/fill/w_540,h_140,al_c,usm_0.66_1.00_0.01,enc_auto/Logo%20Cupra%20orizzontale%20per%20home%20sito.png" alt="Foto 2020 | GIRASOLE" />
+        </a>
+        <nav class="TFS_TeslaCenter TFS_TeslaClose">
+            <a asp-page="/CupraFormentor">Formentor</a>
+            <a asp-page="/CupraLeon">Leon</a>
+            <a asp-page="/CupraLeonSportstourer">Leon Sportstourer</a>
+            <a asp-page="/CupraAteca">Ateca</a>
+            <a asp-page="/CupraBorn">Born</a>
+        </nav>
+        <nav class="TFS_TeslaRight">
+            <a asp-area="Identity" asp-page="./Account/Login" class="TFS_TeslaClose">Account</a>
+            <a id="menuBtn">Menu</a>
+        </nav>
+    </header>
+    <div class="backdrop"></div>
+    <aside>
+        <button class="close">&times;</button>
+        <a asp-page="./Index">Home</a>
+        <h2>TESLA</h2>
+        <a asp-page="/TeslaModelS">Model S</a>
+        <a asp-page="/TeslaModel3">Model 3</a>
+        <a asp-page="/TeslaModelX">Model X</a>
+        <a asp-page="/TeslaModelY">Model Y</a>
+
+        <h2>CUPRA</h2>
+        <a asp-page="/CupraFormentor">Formentor</a>
+        <a asp-page="/CupraLeon">Leon</a>
+        <a asp-page="/CupraLeonSportstourer">Leon Sportstourer</a>
+        <a asp-page="/CupraAteca">Ateca</a>
+        <a asp-page="/CupraBorn">Born</a>
+
+        <h2>FORD</h2>
+        <a asp-page="/MustangMachE">Mustang Mach-E</a>
+
+        <h2>LEXUS</h2>
+        <a asp-page="/LexusUX300E">UX 300e</a>
+
+        <h2>PORSCHE</h2>
+        <a asp-page="/PorscheTaycan">Taycan</a>
+        <a asp-page="/PorscheTaycaCrossTurismo">Taycan Cross Turismo</a>
+    </aside>
+
+    @RenderBody()
+
+    <script src="~/js/Cupra/CupraJS.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
