--- a/TudorForSpeed/TudorForSpeed/wwwroot/css/Cupra/Cupra.css
+++ b/TudorForSpeed/TudorForSpeed/wwwroot/css/Cupra/Cupra.css
@@ -1,2 +1,217 @@
 ﻿body {
+    font-family: 'M PLUS 1', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
+
+.TFS_TeslaClose {
+    display: none;
+}
+
+header {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    padding: 10px 20px;
+    position: fixed;
+    font-size: 18px;
+    background-color: white;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+}
+
+a.logo {
+    height: 12px;
+    width: 100px;
+    color: black;
+    padding: 5px;
+}
+
+.TFS_TeslaCenter > a, .TFS_TeslaRight > a {
+    color: black;
+    font-weight: bold;
+}
+
+    .TFS_TeslaClose > a:hover, .TFS_TeslaRight > a:hover, #menuBtn:hover {
+        color: teal;
+        transition: 0.2s all;
+    }
+
+header nav a {
+    text-decoration: none;
+    padding: 10px 10px;
+}
+
+header nav.TFS_TeslaCenter {
+    text-align: center;
+    padding: 5px;
+}
+
+.TFS_TeslaRight {
+    text-align: right;
+    padding: 5px 20px;
+    color: black;
+}
+
+.TFS_TeslaMenu {
+    display: none;
+}
+
+aside {
+    position: fixed;
+    width: 220px;
+    right: -400px;
+    background-color: white;
+    padding: 60px 40px;
+    z-index: 4;
+    height: 100vh;
+}
+
+    aside a {
+        display: block;
+        color: black;
+        text-decoration: none;
+        padding: 12px 0;
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 10px;
+        text-align: left;
+    }
+
+        aside a:hover {
+            color: teal;
+        }
+
+    aside h2 {
+        color: black;
+        font-weight: bold;
+    }
+
+    aside hr {
+        width: 75%;
+        margin-left: 10px;
+    }
+
+    aside button.close {
+        font-size: 24px;
+        border: 0;
+        background-color: transparent;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 10px;
+        font-family: sans-serif;
+        font-weight: 100;
+        cursor: pointer;
+        color: black;
+    }
+
+    aside.active {
+        right: 0;
+    }
+
+.backdrop {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0,.35);
+    backdrop-filter: blur(5px);
+}
+
+    .backdrop.active {
+        display: block;
+    }
+
+.CupraSectionHome{
+    width: 100%;
+}
+
+.carousel-item img{
+    width: 100%;
+    height: 100vh;
+}
+
+@media (min-width: 768px) {
+    .TFS_TeslaClose {
+        display: initial;
+    }
+}
+
+/* From uiverse.io by @barisdogansutcu */
+.batmaneffect {
+    border: none;
+    position: relative;
+    width: 200px;
+    height: 73px;
+    padding: 0;
+    z-index: 2;
+    -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='868' width='2500' viewBox='0 0 726 252.17'%3E%3Cpath d='M483.92 0S481.38 24.71 466 40.11c-11.74 11.74-24.09 12.66-40.26 15.07-9.42 1.41-29.7 3.77-34.81-.79-2.37-2.11-3-21-3.22-27.62-.21-6.92-1.36-16.52-2.82-18-.75 3.06-2.49 11.53-3.09 13.61S378.49 34.3 378 36a85.13 85.13 0 0 0-30.09 0c-.46-1.67-3.17-11.48-3.77-13.56s-2.34-10.55-3.09-13.61c-1.45 1.45-2.61 11.05-2.82 18-.21 6.67-.84 25.51-3.22 27.62-5.11 4.56-25.38 2.2-34.8.79-16.16-2.47-28.51-3.39-40.21-15.13C244.57 24.71 242 0 242 0H0s69.52 22.74 97.52 68.59c16.56 27.11 14.14 58.49 9.92 74.73C170 140 221.46 140 273 158.57c69.23 24.93 83.2 76.19 90 93.6 6.77-17.41 20.75-68.67 90-93.6 51.54-18.56 103-18.59 165.56-15.25-4.21-16.24-6.63-47.62 9.93-74.73C656.43 22.74 726 0 726 0z'/%3E%3C/svg%3E") no-repeat 50% 50%;
+    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='868' width='2500' viewBox='0 0 726 252.17'%3E%3Cpath d='M483.92 0S481.38 24.71 466 40.11c-11.74 11.74-24.09 12.66-40.26 15.07-9.42 1.41-29.7 3.77-34.81-.79-2.37-2.11-3-21-3.22-27.62-.21-6.92-1.36-16.52-2.82-18-.75 3.06-2.49 11.53-3.09 13.61S378.49 34.3 378 36a85.13 85.13 0 0 0-30.09 0c-.46-1.67-3.17-11.48-3.77-13.56s-2.34-10.55-3.09-13.61c-1.45 1.45-2.61 11.05-2.82 18-.21 6.67-.84 25.51-3.22 27.62-5.11 4.56-25.38 2.2-34.8.79-16.16-2.47-28.51-3.39-40.21-15.13C244.57 24.71 242 0 242 0H0s69.52 22.74 97.52 68.59c16.56 27.11 14.14 58.49 9.92 74.73C170 140 221.46 140 273 158.57c69.23 24.93 83.2 76.19 90 93.6 6.77-17.41 20.75-68.67 90-93.6 51.54-18.56 103-18.59 165.56-15.25-4.21-16.24-6.63-47.62 9.93-74.73C656.43 22.74 726 0 726 0z'/%3E%3C/svg%3E") no-repeat 50% 50%;
+    -webkit-mask-size: 100%;
+    cursor: pointer;
+    background-color: transparent;
+    transform: translateY(8px)
+}
+
+    .batmaneffect:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        box-shadow: 0px 0 0 0 white;
+        transition: all 2s ease;
+    }
+
+    .batmaneffect:hover:after {
+        box-shadow: 0px -13px 56px 12px #ffffffa6;
+    }
+
+    .batmaneffect span {
+        position: absolute;
+        width: 100%;
+        font-size: 15px;
+        font-weight: 100;
+        left: 50%;
+        top: 39%;
+        letter-spacing: 3px;
+        text-align: center;
+        transform: translate(-50%,-50%);
+        color: black;
+        transition: all 2s ease;
+    }
+
+    .batmaneffect:hover span {
+        color: white;
+    }
+
+    .batmaneffect:before {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 100%;
+        background-color: black;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 1s ease;
+    }
+
+    .batmaneffect:hover:before {
+        width: 100%;
+    }
+
+.cuprastylebatman {
+    background-color: white;
+    border-radius: 5%;
+    width: 600px;
+    margin: 0 auto 40px auto;
+}
+
+    .cuprastylebatman p {
+        color: black;
+    }
+
+/*    .logo img{
+    }*/
