--- a/TudorForSpeed/TudorForSpeed/wwwroot/css/Tesla.css
+++ b/TudorForSpeed/TudorForSpeed/wwwroot/css/Tesla.css
@@ -5,48 +5,127 @@ body{
     padding: 0;
 }
 
-.TFS_TeslaClose{display: none;}
 
-@media (min-width: 768px) {
-    .TFS_TeslaClose{display: initial;}
+.TFS_TeslaClose {
+    display: none;
 }
 
-header{
+header {
     display: grid;
     grid-template-columns: auto 1fr auto;
     padding: 10px 20px;
     position: fixed;
+    font-size: 18px;
+    background-color: white;
     top: 0;
     z-index: 2;
     width: 100%;
 }
 
-a.logo{
+a.logo {
     height: 12px;
     width: 100px;
-    color: inherit;
+    color: black;
+    padding: 5px;
 }
 
-header a{
-    color: inherit;
+.TFS_TeslaCenter > a, .TFS_TeslaRight > a {
+    color: black;
+    font-weight: bold;
 }
 
-header nav a{
+    .TFS_TeslaClose > a:hover, .TFS_TeslaRight > a:hover, #menuBtn:hover {
+        color: teal;
+        transition: 0.2s all;
+    }
+
+header nav a {
     text-decoration: none;
     padding: 10px 10px;
 }
 
-header nav.TFS_TeslaCenter{
-    text-align: center ;
+header nav.TFS_TeslaCenter {
+    text-align: center;
+    padding: 5px;
 }
 
-.TFS_TeslaRight{
+.TFS_TeslaRight {
     text-align: right;
     padding: 5px 20px;
+    color: white;
 }
 
-.TFS_TeslaMenu{
+.TFS_TeslaMenu {
     display: none;
+}
+
+aside {
+    position: fixed;
+    width: 220px;
+    right: -400px;
+    background-color: white;
+    padding: 60px 40px;
+    z-index: 4;
+    height: 100vh;
+}
+
+    aside a {
+        display: block;
+        color: black;
+        text-decoration: none;
+        padding: 12px 0;
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 10px;
+        text-align: left;
+    }
+
+        aside a:hover {
+            color: teal;
+        }
+
+    aside h2 {
+        color: black;
+        font-weight: bold;
+    }
+
+    aside hr {
+        width: 75%;
+        margin-left: 10px;
+    }
+
+    aside button.close {
+        font-size: 24px;
+        border: 0;
+        background-color: transparent;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 10px;
+        font-family: sans-serif;
+        font-weight: 100;
+        cursor: pointer;
+        color: black;
+    }
+
+    aside.active {
+        right: 0;
+    }
+
+.backdrop {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0,.35);
+    backdrop-filter: blur(5px);
+}
+
+    .backdrop.active {
+        display: block;
+    }
+
+@media (min-width: 768px) {
+    .TFS_TeslaClose{display: initial;}
 }
 
 /* Tesla Pages */
@@ -125,65 +204,6 @@ section h1{
     height: 300px;
     margin-right: auto;
     margin-left: 10rem;
-}
-
-aside{
-    position: fixed;
-    width: 220px;
-    right: -400px;
-    background-color: #fff;
-    padding: 60px 40px;
-    z-index: 4;
-    height: 100vh;
-}
-
-aside a{
-    display: block;
-    color: inherit;
-    text-decoration: none;
-    padding: 12px 0;
-    font-size: 14px;
-    font-weight: 500;
-    margin-left: 10px;
-    text-align: left;
-}
-
-aside h1{
-    color: #b37979;
-}
-
-aside hr{  
-    width: 75%;
-    margin-left: 10px;
-}
-
-aside button.close{
-    font-size: 24px;
-    border: 0;
-    background-color: transparent;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    font-family: sans-serif;
-    font-weight: 100;
-    cursor: pointer;
-}
-
-aside.active{
-    right: 0;
-}
-
-.backdrop{
-    display: none;
-    position: fixed;
-    inset: 0;
-    background-color: rgba(0, 0, 0,.35);
-    backdrop-filter: blur(5px);
-}
-
-.backdrop.active{
-    display: block;
 }
 
 /* From uiverse.io by @gagan-gv */
