--- a/TudorForSpeed/TudorForSpeed/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,63 +1,34 @@
 ﻿@page
 @model RegisterModel
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
 @{
-    Layout = "~/Pages/Shared/Layout/_IdentityLayout.cshtml";
 }
 
-<header>
-    <a asp-area="" asp-page="" class="logo">
-
-    </a>
-    <nav class="TFS_TeslaCenter">
-        <a asp-page="" style="color:black">Register</a>
-    </nav>
-    <nav class="TFS_TeslaRight">
-        @if (SignInManager.IsSignedIn(User))
-        {
-            <a class="nav-link text-dark TFS_TeslaClose" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        }
-        else
-        {
-            <a class="TFS_TeslaClose" asp-area="Identity" asp-page="/Account/Login">Login</a>
-        }
-        <a asp-area="Identity" asp-page="/Account/Login">Login</a>
-        <a id="menuBtn">Menu</a>
-    </nav>
-</header>
-
 <section class="provaidentity">
-    <form id="account" method="post">
+
+    <form method="post" style="padding: 10%">
         <h2>Register</h2>
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
             <div class="input-group">
-                <input type="text" asp-for="Input.Email" name="text" class="input" placeholder="Email">
+                <input type="text" asp-for="Input.Email" class="input" placeholder="Email">
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <div class="input-group">
-                <input type="password" asp-for="Input.Password" name="text" class="input" placeholder="Password">
+                <input type="password" asp-for="Input.Password" class="input" placeholder="Password">
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <div class="input-group">
-                <input type="password" asp-for="Input.ConfirmPassword" name="text" class="input" placeholder="Confirm Password">
+                <input type="password" asp-for="Input.ConfirmPassword" class="input" placeholder="Password">
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
         </div>
-        <div class="form-group">
             <button type="submit">
                 Register
             </button>
-        </div>
     </form>
 </section>
 
