--- a/TudorForSpeed/TudorForSpeed/Pages/Order.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Order.cshtml
@@ -3,82 +3,86 @@
 @{
     Layout = "~/Pages/Shared/Layout/_OrderLayout.cshtml";
 }
-<form method="post">
-    <!-- ID -->
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="ID" required="" type="text" asp-for="Ordine.OrderID">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- NAME -->
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Name" required="" type="text" asp-for="Ordine.Name">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- SURNAME -->
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Surname" required="" type="text" asp-for="Ordine.Surname">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- MODELLO -->
-    <div>
-        <select class="form-select" aria-label="Default select example" asp-for="Ordine.Modello">
-            <option selected>Open this select menu</option>
-            <option value="Tesla Model S">Tesla Model S</option>
-            <option value="Tesla Model 3">Tesla Model 3</option>
-            <option value="Tesla Model X">Tesla Model X</option>
-            <option value="Tesla Model Y">Tesla Model Y</option>
-            <option value="Cupra Formentor">Cupra Fromentor</option>
-            <option value="Cupra Leon">Cupra Leon</option>
-            <option value="Cupra Born">Cupra Born</option>
-            <option value="Cupra Ateca">Cupra Ateca</option>
-            <option value="Cupra Leon">Cupra Leon Sportstourer</option>
-        </select>
-    </div>
 
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Modello" required="" type="text" asp-for="Ordine.Modello">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- EMAIL -->
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Email" required="" type="text" asp-for="Ordine.Email">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- PHONE -->
-    <div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Phone" required="" type="text" asp-for="Ordine.Phone">
-            <span class="input-border"></span>
-        </div>
-    </div>
-    <!-- PREZZO -->
-    <!--<div class="form-group">
-        <div class="form">
-            <input class="input" placeholder="Prezzo" required="" type="text" asp-for="Ordine.Prezzo">
-            <span class="input-border"></span>
-        </div>
-    </div>-->
-    <!-- SUBMIT -->
-    <div class="form-group">
-        <button type="submit">
-            <div class="default-btn">
-                <svg class="css-i6dzq1" stroke-linejoin="round" stroke-linecap="round" fill="none" stroke-width="2" stroke="#FFF" height="20" width="20" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle r="3" cy="12" cx="12"></circle></svg>
-                <span>Quick View</span>
+<section class="orderbody">
+
+    <form method="post">
+        <!-- ID -->
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="ID" required="" type="text" asp-for="Ordine.OrderID">
+                <span class="input-border"></span>
             </div>
-            <div class="hover-btn">
-                <svg class="css-i6dzq1" stroke-linejoin="round" stroke-linecap="round" fill="none" stroke-width="2" stroke="#ffd300" height="20" width="20" viewBox="0 0 24 24"><circle r="1" cy="21" cx="9"></circle><circle r="1" cy="21" cx="20"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                <span>Shop Now</span>
+        </div>
+        <!-- NAME -->
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Name" required="" type="text" asp-for="Ordine.Name">
+                <span class="input-border"></span>
             </div>
-        </button>
-    </div>
-</form>
+        </div>
+        <!-- SURNAME -->
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Surname" required="" type="text" asp-for="Ordine.Surname">
+                <span class="input-border"></span>
+            </div>
+        </div>
+        <!-- MODELLO -->
+        <div>
+            <select class="form-select" aria-label="Default select example" asp-for="Ordine.Modello">
+                <option selected>Open this select menu</option>
+                <option value="Tesla Model S">Tesla Model S</option>
+                <option value="Tesla Model 3">Tesla Model 3</option>
+                <option value="Tesla Model X">Tesla Model X</option>
+                <option value="Tesla Model Y">Tesla Model Y</option>
+                <option value="Cupra Formentor">Cupra Fromentor</option>
+                <option value="Cupra Leon">Cupra Leon</option>
+                <option value="Cupra Born">Cupra Born</option>
+                <option value="Cupra Ateca">Cupra Ateca</option>
+                <option value="Cupra Leon">Cupra Leon Sportstourer</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Modello" required="" type="text" asp-for="Ordine.Modello">
+                <span class="input-border"></span>
+            </div>
+        </div>
+        <!-- EMAIL -->
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Email" required="" type="text" asp-for="Ordine.Email">
+                <span class="input-border"></span>
+            </div>
+        </div>
+        <!-- PHONE -->
+        <div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Phone" required="" type="text" asp-for="Ordine.Phone">
+                <span class="input-border"></span>
+            </div>
+        </div>
+        <!-- PREZZO -->
+        <!--<div class="form-group">
+            <div class="form">
+                <input class="input" placeholder="Prezzo" required="" type="text" asp-for="Ordine.Prezzo">
+                <span class="input-border"></span>
+            </div>
+        </div>-->
+        <!-- SUBMIT -->
+        <div class="form-group">
+            <button type="submit">
+                <div class="default-btn">
+                    <svg class="css-i6dzq1" stroke-linejoin="round" stroke-linecap="round" fill="none" stroke-width="2" stroke="#FFF" height="20" width="20" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle r="3" cy="12" cx="12"></circle></svg>
+                    <span>Quick View</span>
+                </div>
+                <div class="hover-btn">
+                    <svg class="css-i6dzq1" stroke-linejoin="round" stroke-linecap="round" fill="none" stroke-width="2" stroke="#ffd300" height="20" width="20" viewBox="0 0 24 24"><circle r="1" cy="21" cx="9"></circle><circle r="1" cy="21" cx="20"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                    <span>Shop Now</span>
+                </div>
+            </button>
+        </div>
+    </form>
+</section>
