--- a/TudorForSpeed/TudorForSpeed/Pages/Shared/_LoginPartial.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Shared/_LoginPartial.cshtml
@@ -4,21 +4,22 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
+    <li style="float: right,">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-            <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button type="submit" style="width: 150px; height: 60px; padding: 10px; border: 1px solid black">Logout</button>
         </form>
+    </li>
+    <li style="float: right; padding: 6px;">
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name!</a>
     </li>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
+
     <li style="float: right;">
         <a asp-area="Identity" asp-page="/Account/Login" style="color: #435775;">Account</a>
+    </li>
+    <li style="float: right;">
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
 }
