--- a/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_IndexLayout.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_IndexLayout.cshtml
@@ -59,6 +59,9 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a asp-fragment="#OrderList">View!</a>
+            </li>
             @if (SignInManager.IsSignedIn(User))
             {
                 <li style="float: right;">
