--- a/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_OrderLayout.cshtml
+++ b/TudorForSpeed/TudorForSpeed/Pages/Shared/Layout/_OrderLayout.cshtml
@@ -21,11 +21,8 @@
 
         </a>
         <nav class="TFS_TeslaCenter TFS_TeslaClose">
-            <a asp-page="/CupraFormentor">Formentor</a>
-            <a asp-page="/CupraLeon">Leon</a>
-            <a asp-page="/CupraLeonSportstourer">Leon Sportstourer</a>
-            <a asp-page="/CupraAteca">Ateca</a>
-            <a asp-page="/CupraBorn">Born</a>
+            <a asp-page="">Order NOW</a>
+
         </nav>
         <nav class="TFS_TeslaRight">
             <a asp-area="Identity" asp-page="./Account/Login" class="TFS_TeslaClose">Account</a>
